# theme-browser-monorepo

./: .dockerignore  .gitignore  .gitmodules  .npmrc  1  CHANGELOG.md  Makefile  PLAN.md  README.md  package-lock.json  package.json  pnpm-lock.yaml  theme-validation-report.md
.githooks/: pre-push
.github/workflows/: ci.yml
docker/: registry.Dockerfile
docs/: README.md  THEME-DETECTION-HEURISTICS.md  THEME-DETECTION-SYSTEM.md  automation.md  dependencies.md  release.md  theme-detection-heuristics.md  theme-detection.md  workflows.md
scripts/: 01-sync-index.ts  02-detect-strategies.ts  03-merge-sources.ts  04-generate-themes.mjs  05-install-themes.mjs  apply-variant-modes.ts  build-overrides.ts  build-registry-dockerfile.sh  detect-ast.ts  detect-strategies.ts  discover-themes.ts  generate-bundle.ts  generate-full-report.ts  generate-verification-report.ts  install-hooks.sh  lib  merge-overrides.ts  pipeline.sh  refresh.sh  registry-refresh.sh  release.sh  run-registry-docker.sh  split-overrides.ts  update-submodules.sh  validate  verify-themes-deep.ts  verify-themes.ts  verify-versioning.sh  version.sh
theme-browser-registry-rs/: .env.example  .gitignore  Cargo.toml  README.md  config.json  overrides.json  test.config.json
theme-browser-registry-rs/src/: cli.rs  config.rs  lib.rs  logger.rs  main.rs  merge.rs  runner.rs  types.rs
theme-browser-registry-rs/src/commands/: export.rs  mod.rs  publish.rs  sync.rs  types.rs  watch.rs
theme-browser-registry-rs/src/db/: cache.rs  mod.rs
theme-browser-registry-rs/src/github/: client.rs  mod.rs  parser.rs
(+17 files in other folders)
