[package]
name = "theme-browser-registry"
version = "0.1.0"
edition = "2021"
description = "Rust theme registry indexer for theme-browser.nvim"
license = "MIT"
authors = ["Raul Correia"]
repository = "https://github.com/raulcorreia7/theme-browser.nvim"

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "env"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# GitHub API
octorust = "0.10"

# Database
sea-orm = { version = "1", features = ["sqlx-sqlite", "runtime-tokio-native-tls"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Utilities
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
dotenvy = "0.15"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "theme-browser-registry"
path = "src/main.rs"
